@@ -1,3 +1,8 @@
+2004-10-13  Mark Mitchell  <mark@codesourcery.com>
+
+	* scripttempl/armbpabi.sc: Do not put .gnu.version.* into a
+	loadable segment.
+
 2004-10-13  Alan Modra  <amodra@bigpond.net.au>
 
 	PR 44
